FIX: Font load |text remains visible during webfont load

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -8,10 +8,11 @@
   url('fonts/fontawesome/fontawesome-webfont.svg?v=#4.1.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Cinzel);
-@import url(https://fonts.googleapis.com/css?family=Noto+Serif);
+@import url(https://fonts.googleapis.com/css?family=Cinzel&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Noto+Serif&display=swap);
 //@import url(https://fonts.googleapis.com/css?family=Playfair+Display+SC);
 //@import url(https://fonts.googleapis.com/css?family=Lora);
 
