--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@
  * 2. Prevent adjustments of font size after orientation changes in
  *    IE on Windows Phone and in iOS.
  */
-@import url(https://fonts.googleapis.com/css?family=Cinzel);
-@import url(https://fonts.googleapis.com/css?family=Noto+Serif);
+@import url(https://fonts.googleapis.com/css?family=Cinzel&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Noto+Serif&display=swap);
 html {
   line-height: 1.15;
   /* 1 */
@@ -652,6 +652,7 @@ template {
   src: url("fonts/fontawesome/fontawesome-webfont.eot?#iefix&v=#4.1.0") format("embedded-opentype"), url("fonts/fontawesome/fontawesome-webfont.woff2?v=#4.1.0") format("woff2"), url("fonts/fontawesome/fontawesome-webfont.woff?v=#4.1.0") format("woff"), url("fonts/fontawesome/fontawesome-webfont.ttf?v=#4.1.0") format("truetype"), url("fonts/fontawesome/fontawesome-webfont.svg?v=#4.1.0#fontawesomeregular") format("svg");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 body {
   color: #333;
